# ASC-extension

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
examples/: epoch=0-val_loss=0.0000.pt2  painn.ckpt
src/ASC_extension/: __init__.py
tests/: check_model.py  test_gui.py  test_knn.py  test_modifier.py
tests/fixtures/: Si_traj.xyz
