[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ASC-extension"
version = "0.0.1"
description = "OVITO extension for the Atomic Structure Classification (ASC) library."
keywords = ["ovito", "ovito-extension"]
authors = [
    { name = "Gael Huynh", email = "gael.huynh@gmail.com" },
    { name = "Dylan Bissuel", email = "dylan.bissuel@univ-lyon1.fr" },
    { name = "David Rodney", email = "david.rodney@univ-lyon1.fr" },
]
maintainers = [{ name = "Gael Huynh", email = "gael.huynh@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ovito>=3.15.0",
    "torch>=2.0.0",
    "torch-geometric>=2.6.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
repository = "https://github.com/akwarii/ASC-extension.git"

[project.entry-points.'OVITO.Modifier']
"Atomic Structure Classification" = "ASC_extension:AtomicStructureClassification"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]
