[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ASC-extension"
version = "0.0.1"
description = "OVITO extension for the Atomic Structure Classification (ASC) library."
keywords = ["ovito", "ovito-extension"]
authors = [
    { name = "Gael Huynh", email = "gael.huynh@gmail.com" },
    { name = "Dylan Bissuel", email = "dylan.bissuel@univ-lyon1.fr" },
    { name = "David Rodney", email = "david.rodney@univ-lyon1.fr" },
]
maintainers = [{ name = "Gael Huynh", email = "gael.huynh@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ovito>=3.15.0",
    "torch==2.10.0",
    "torch-geometric>=2.7.0",
    "pyg-lib @ git+https://github.com/pyg-team/pyg-lib.git",
]

[tool.uv]
no-build-isolation-package = ["pyg-lib"]
extra-build-dependencies = { pyg-lib = ["ninja>=1.13.0", "wheel>=0.46.3", "setuptools>=81.0.0"] }

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
repository = "https://github.com/akwarii/ASC-extension.git"

[project.entry-points.'OVITO.Modifier']
"Atomic Structure Classification" = "ASC_extension:AtomicStructureClassification"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "default",
    "ignore::DeprecationWarning:torch_geometric.*",
    "ignore:`torch.jit.(script|script_method)` is deprecated:DeprecationWarning",
    "ignore:The given buffer is not writable:UserWarning",
]

# TODO: test if the build works with the GPU version of PyTorch. If it does, remove the CPU-specific index and source.
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
